tutorial/subnets.tf
resource "aws_subnet" "public_1" {
    vpc_id = aws_vpc.main.id
    cidr_block = "192.168.0.0/18"  
    availability_zone = "ap-northeast-2a"
    map_public_ip_on_launch = true

    tags = {
      Name = "public-ap-northeast-2a"
      "kubernetes.io/cluster/eks" = "shared"
      "kubernetes.io/role/elb" = 1
    }
}

resource "aws_subnet" "public_2" {
    vpc_id = aws_vpc.main.id
    cidr_block = "192.168.64.0/18"  
    availability_zone = "ap-northeast-2b"
    map_public_ip_on_launch = true

    tags = {
      Name = "public-ap-northeast-2b"
      "kubernetes.io/cluster/eks" = "shared"
      "kubernetes.io/role/elb" = 1
    }
}

resource "aws_subnet" "private_1" {
    vpc_id = aws_vpc.main.id
    cidr_block = "192.168.0.0/18"  
    availability_zone = "ap-northeast-2a"
    map_public_ip_on_launch = true

    tags = {
      Name = "private-ap-northeast-1a"
      "kubernetes.io/cluster/eks" = "shared"
      "kubernetes.io/role/elb" = 1
    }
}

resource "aws_subnet" "private_2" {
    vpc_id = aws_vpc.main.id
    cidr_block = "192.168.192.0/18"  
    availability_zone = "ap-northeast-2b"
    map_public_ip_on_launch = true

    tags = {
      Name = "private-ap-northeast-2b"
      "kubernetes.io/cluster/eks" = "shared"
      "kubernetes.io/role/elb" = 1
    }
}
